--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <h1>Welcome to PhotoUp</h1>
     <p>PhotoUp is an AI-powered photo editor with features like <strong>Enhance</strong>, <strong>Background Remove</strong>, and more.</p>
     <img src="photoup.png" alt="PhotoUp Banner" class="banner">
-    <a class="btn" href="privacy_policy.html">Read Our Privacy Policy</a>
+    <a class="btn" href="https://photouplab.github.io/photoup/privacy_policy.html">Read Our Privacy Policy</a>
   </div>
 </body>
 </html>
