--- a/index.html
+++ b/index.html
@@ -4,15 +4,15 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>PhotoUp - AI Photo Editor</title>
+  <title>PhotoRetouch AI - AI Photo Editor</title>
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
   <div class="container">
-    <h1>Welcome to PhotoUp</h1>
-    <p>PhotoUp is an AI-powered photo editor with features like <strong>Enhance</strong>, <strong>Background Remove</strong>, and more.</p>
-    <img src="photoup.png" alt="PhotoUp Banner" class="banner">
-    <a class="btn" href="https://photouplab.github.io/photoup/privacy_policy.html">Read Our Privacy Policy</a>
+    <h1>Welcome to PhotoRetouch AI</h1>
+    <p>PhotoRetouch AI is an AI-powered photo editor with features like <strong>Remove Objects</strong>, <strong>Background Remove</strong>, and more.</p>
+    <img src="photoretouch_banner.webp" alt="PhotoRetouch Banner" class="banner">
+    <a class="btn" href="https://photoretouch-ai.github.io/photoup/privacy_policy.html">Read Our Privacy Policy</a>
   </div>
 </body>
 </html>
