--- a/privacy_policy.html
+++ b/privacy_policy.html
@@ -4,24 +4,24 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>PhotoUp Privacy Policy</title>
+  <title>PhotoRetouch Privacy Policy</title>
 </head>
 <body style="font-family: Arial, sans-serif; line-height: 1.6; padding: 20px; max-width: 800px; margin: auto;">
 
-  <h1>PhotoUp Privacy Policy</h1>
+  <h1>PhotoRetouch Privacy Policy</h1>
   <p><strong>Effective Date:</strong> July 25, 2025</p>
 
-  <p>Welcome to PhotoUp. This Privacy Policy explains how InflyJoy Mobile (“we”, “our”, or “us”) collects, uses, and protects your personal information. PhotoUp is an AI-powered photo editing application providing smart features such as <strong>AI Enhance, Background Remove, Color Correction, Retouch, and other intelligent image processing tools</strong> to help you achieve professional results with minimal effort. We are committed to protecting your privacy and handling your data responsibly and transparently.</p>
+  <p>Welcome to PhotoRetouch. This Privacy Policy explains how InflyJoy Mobile (“we”, “our”, or “us”) collects, uses, and protects your personal information. PhotoRetouch is an AI-powered photo editing application providing smart features such as <strong>AI Remove Objects, Enhance, Background Remove, Color Correction, Retouch, and other intelligent image processing tools</strong> to help you achieve professional results with minimal effort. We are committed to protecting your privacy and handling your data responsibly and transparently.</p>
 
   <h2>1. Data Controller and Representative</h2>
-  <p>InflyJoy Mobile and its subsidiaries (“PhotoUp”, “we”, or “our”) act as the data controller. We comply with the General Data Protection Regulation (GDPR) and other applicable privacy laws to ensure lawful handling of your personal data. This policy explains what information we collect, how we use it, and your rights regarding that information.</p>
+  <p>InflyJoy Mobile and its subsidiaries (“PhotoRetouch”, “we”, or “our”) act as the data controller. We comply with the General Data Protection Regulation (GDPR) and other applicable privacy laws to ensure lawful handling of your personal data. This policy explains what information we collect, how we use it, and your rights regarding that information.</p>
 
   <h2>2. What Kind of Information We Collect</h2>
 
   <h3>2.1 Personal Information</h3>
   <p>We may collect the following personally identifiable information (“Personal Information”):</p>
   <ul>
-    <li>Name, email address, phone number, or social media profile (e.g., Facebook, Twitter) used to log into PhotoUp</li>
+    <li>Name, email address, phone number, or social media profile (e.g., Facebook, Twitter) used to log into PhotoRetouch</li>
     <li>Photos and metadata you upload or edit using the app</li>
     <li>Location data (e.g., from GPS, Wi-Fi, or IP address)</li>
     <li>Technical log data (device type, OS version, IP address, app version, screen resolution, etc.)</li>
@@ -62,13 +62,13 @@
   <p>We may store or process your information outside of your home country, including in jurisdictions that may have different data protection laws. When doing so, we ensure that adequate protection measures are in place, such as standard contractual clauses (SCCs) or other lawful mechanisms.</p>
 
   <h2>8. Your Rights</h2>
-  <p>You have the right to access, rectify, delete, or restrict processing of your personal data. You may also object to certain uses of your data or withdraw consent at any time. Please contact us at <a href="mailto:photoup.feedback@gmail.com">photoup.feedback@gmail.com</a> to exercise these rights.</p>
+  <p>You have the right to access, rectify, delete, or restrict processing of your personal data. You may also object to certain uses of your data or withdraw consent at any time. Please contact us at <a href="mailto:PhotoRetouch.feedback@gmail.com">PhotoRetouch.feedback@gmail.com</a> to exercise these rights.</p>
 
   <h2>9. Data Retention</h2>
   <p>We retain your data only as long as necessary to fulfill the purposes outlined in this policy, unless a longer retention period is required or permitted by law.</p>
 
   <h2>10. Children’s Privacy</h2>
-  <p>PhotoUp does not knowingly collect personal data from children under 13 years of age. If we become aware of such collection, we will delete the information immediately. Please contact us if you believe this has occurred.</p>
+  <p>PhotoRetouch does not knowingly collect personal data from children under 13 years of age. If we become aware of such collection, we will delete the information immediately. Please contact us if you believe this has occurred.</p>
 
   <h2>11. Sensitive Information</h2>
   <p>Please do not submit sensitive personal data (such as racial/ethnic origin, religious beliefs, or health status) through the app. We do not collect or process such data intentionally.</p>
@@ -77,7 +77,7 @@
   <p>This Privacy Policy may be updated from time to time. We will notify users of material changes and update the "Effective Date" above accordingly. Continued use of the app signifies acceptance of the revised policy.</p>
 
   <h2>13. Contact Us</h2>
-  <p>If you have any questions, concerns, or complaints about this Privacy Policy or our practices, please contact us at <a href="mailto:photoup.feedback@gmail.com">photoup.feedback@gmail.com</a>.</p>
+  <p>If you have any questions, concerns, or complaints about this Privacy Policy or our practices, please contact us at <a href="mailto:PhotoRetouch.feedback@gmail.com"> photoup.feedback@gmail.com</a>.</p>
 
 </body>
 </html>
