--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <h1>Welcome to PhotoRetouch AI</h1>
     <p>PhotoRetouch AI is an AI-powered photo editor with features like <strong>Remove Objects</strong>, <strong>Background Remove</strong>, and more.</p>
     <img src="photoretouch_banner.webp" alt="PhotoRetouch Banner" class="banner">
-    <a class="btn" href="https://photoretouch-ai.github.io/photoup/privacy_policy.html">Read Our Privacy Policy</a>
+    <a class="btn" href="https://photoretouch-ai.github.io/privacy_policy.html">Read Our Privacy Policy</a>
   </div>
 </body>
 </html>
